--- a/frontend/login.html
+++ b/frontend/login.html
@@ -60,9 +60,33 @@
 
 <script>
 function goNext() {
+  const email = document.querySelector('input[type="email"]').value;
+  const password = document.querySelector('input[type="password"]').value;
+
+  if (!email || !password) {
+    alert("Please enter email and password");
+    return;
+  }
+
+  let users = JSON.parse(localStorage.getItem("ikigai_users")) || [];
+
+  const user = users.find(
+    u => u.email === email && u.password === password
+  );
+
+  if (!user) {
+    alert("Invalid credentials or account does not exist");
+    return;
+  }
+
+  // Save logged-in user
+  localStorage.setItem("ikigai_current_user", JSON.stringify(user));
+
+  alert(`Welcome back, ${user.name}!`);
   window.location.href = "about.html";
 }
 </script>
+
 
 </body>
 </html>
