auto chane , username and data

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,53 +3,69 @@
 <head>
   <meta charset="UTF-8" />
   <title>Ikigai Mental Health Checker</title>
+
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #f4f6fb;
       padding: 20px;
     }
+
     .container {
       max-width: 600px;
       margin: auto;
       background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
     }
+
+    h2 {
+      text-align: center;
+    }
+
     input, button {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 8px 0;
+      font-size: 15px;
     }
+
     button {
       background: #4f46e5;
       color: white;
       border: none;
       cursor: pointer;
+      border-radius: 8px;
+      font-weight: bold;
     }
+
     button:hover {
       background: #4338ca;
     }
+
     .card {
       background: #eef2ff;
-      padding: 10px;
-      border-radius: 8px;
-      margin-top: 10px;
+      padding: 12px;
+      border-radius: 10px;
+      margin-top: 12px;
+      line-height: 1.6;
     }
+
     h3 {
-      margin-top: 20px;
+      margin-top: 25px;
       color: #333;
     }
   </style>
 </head>
 
 <body>
+
 <div class="container">
   <h2>🌱 Ikigai Mental Health Checker</h2>
 
-  <input id="sleep" type="number" placeholder="Sleep hours" />
-  <input id="study" type="number" placeholder="Study hours" />
+  <input id="sleep" type="number" placeholder="Sleep hours (e.g. 7)" />
+  <input id="study" type="number" placeholder="Study hours (e.g. 5)" />
   <input id="screen" type="number" placeholder="Screen time (hrs)" />
   <input id="activity" type="number" placeholder="Physical activity (mins)" />
   <input id="mood" type="number" placeholder="Mood (1–5)" />
@@ -59,7 +75,16 @@
   <div id="result"></div>
 </div>
 
+<!-- ================== SCRIPT ================== -->
 <script>
+/* 🔒 Protect page: must be logged in */
+const currentUser = JSON.parse(localStorage.getItem("ikigai_current_user"));
+if (!currentUser) {
+  alert("Please login first");
+  window.location.href = "login.html";
+}
+
+/* 📊 MAIN ANALYZE FUNCTION */
 async function analyze() {
   const data = {
     sleep: Number(document.getElementById("sleep").value),
@@ -69,6 +94,12 @@ async function analyze() {
     mood: Number(document.getElementById("mood").value)
   };
 
+  // Basic validation
+  if (Object.values(data).some(v => isNaN(v))) {
+    alert("Please fill all fields correctly");
+    return;
+  }
+
   const response = await fetch("http://127.0.0.1:5000/ikigai", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
@@ -77,8 +108,9 @@ async function analyze() {
 
   const res = await response.json();
 
+  // ✅ SHOW RESULT
   document.getElementById("result").innerHTML = `
-    <h3>🔹 Behavioral Insights (Normalized Scores)</h3>
+    <h3>🔹 Daily Habit Scores</h3>
     <div class="card">
       🛌 Sleep: ${res.layer1_normalized.sleep_score}<br>
       📚 Study: ${res.layer1_normalized.study_score}<br>
@@ -87,33 +119,53 @@ async function analyze() {
       😌 Mood: ${res.layer1_normalized.mood_score}
     </div>
 
-    <h3>🔹 Stress & Productivity Analysis</h3>
+    <h3>🧠 Stress & Productivity</h3>
     <div class="card">
-      🧠 Stress Score: ${res.layer2_scores.stress_score}<br>
-      ⚠️ Stress Level (Rule-based): ${res.layer2_scores.rule_based_stress}<br>
-      📊 Productivity: ${res.layer2_scores.productivity_score}
+      Stress Score: ${res.layer2_scores.stress_score}<br>
+      Stress Level: <b>${res.layer2_scores.rule_based_stress}</b><br>
+      Productivity: ${res.layer2_scores.productivity_score}
     </div>
-
-     <h3>🔹 ML Validation & Safety Checks</h3>
-     <div class="card">
-       🤖 ML Stress Prediction: ${res.layer3_ml_support.ml_predicted_stress}<br>
-       ✅ Final Stress Level: <b>${res.layer3_ml_support.final_stress_level}</b>
-     </div>
 
     <h3>🌸 Ikigai Balance</h3>
     <div class="card">
-      ❤️ Love: ${res.layer3_ikigai.love}<br>
-      🎯 Good At: ${res.layer3_ikigai.good_at}<br>
-      🌍 Need: ${res.layer3_ikigai.need}<br>
-      💼 Value: ${res.layer3_ikigai.value}<br><br>
+      Love ❤️: ${res.layer3_ikigai.love}<br>
+      Good At 🎯: ${res.layer3_ikigai.good_at}<br>
+      Need 🌍: ${res.layer3_ikigai.need}<br>
+      Value 💼: ${res.layer3_ikigai.value}<br><br>
       ⭐ <b>Ikigai Score: ${res.layer3_ikigai.ikigai_score}</b>
     </div>
   `;
+
+  // ✅ SAVE RESULT FOR USER
+  saveIkigaiResult(
+    res.layer3_ikigai.ikigai_score,
+    res.layer3_ml_support.final_stress_level
+  );
+}
+
+/* 💾 SAVE RESULT TO LOCAL STORAGE */
+function saveIkigaiResult(score, stress) {
+  const currentUser = JSON.parse(localStorage.getItem("ikigai_current_user"));
+  if (!currentUser) return;
+
+  let users = JSON.parse(localStorage.getItem("ikigai_users")) || [];
+  const user = users.find(u => u.email === currentUser.email);
+  if (!user) return;
+
+  if (!user.ikigaiHistory) {
+    user.ikigaiHistory = [];
+  }
+
+  user.ikigaiHistory.push({
+    score,
+    stress,
+    date: new Date().toISOString().split("T")[0]
+  });
+
+  localStorage.setItem("ikigai_users", JSON.stringify(users));
 }
 </script>
+
 </body>
 </html>
-
-
-
 
