--- a/frontend/home.html
+++ b/frontend/home.html
@@ -11,7 +11,6 @@
       background: #f5f7fb;
     }
 
-    /* ---------- NAVBAR ---------- */
     .navbar {
       background: white;
       display: flex;
@@ -40,7 +39,6 @@
       font-size: 14px;
     }
 
-    /* ---------- HERO ---------- */
     .hero {
       margin: 30px auto;
       width: 90%;
@@ -56,7 +54,6 @@
       object-fit: cover;
     }
 
-    /* ---------- CONTENT ---------- */
     .container {
       width: 90%;
       max-width: 1000px;
@@ -69,7 +66,6 @@
       color: #333;
     }
 
-    /* ---------- DASHBOARD ---------- */
     .dashboard {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -94,12 +90,6 @@
       margin: 10px 0;
     }
 
-    .tag {
-      font-size: 14px;
-      color: #555;
-    }
-
-    /* ---------- CTA ---------- */
     .cta {
       margin: 40px 0;
       background: linear-gradient(135deg, #4f46e5, #16a34a);
@@ -113,10 +103,6 @@
       gap: 20px;
     }
 
-    .cta h3 {
-      margin: 0;
-    }
-
     .cta button {
       background: white;
       color: #4f46e5;
@@ -127,90 +113,78 @@
       cursor: pointer;
       font-weight: bold;
     }
-
-    .cta button:hover {
-      background: #eef2ff;
-    }
   </style>
 </head>
 
 <body>
 
-<!-- NAVBAR -->
 <div class="navbar">
   <div class="logo">🌱 Ikigai</div>
   <div class="nav-right">
-    <div class="profile" id="profileName"></div>
+    <div class="profile" id="userName"></div>
+    <button onclick="logout()">Logout</button>
   </div>
 </div>
 
-<!-- HERO IMAGE -->
 <div class="hero">
-  <img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773"
-       alt="Mental well-being" />
+  <img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773" />
 </div>
 
-<!-- MAIN CONTENT -->
 <div class="container">
-
-  <!-- DASHBOARD -->
   <h2>📊 Your Ikigai Dashboard</h2>
 
   <div class="dashboard">
     <div class="card">
       <h3>Latest Ikigai</h3>
-      <div class="score">78</div>
-      <div class="tag">Balanced 🌸</div>
+      <div class="score" id="latestScore">--</div>
     </div>
 
     <div class="card">
-      <h3>Avg (Last 7)</h3>
-      <div class="score">72</div>
-      <div class="tag">Moderate 🙂</div>
+      <h3>Average Score</h3>
+      <div class="score" id="avgScore">--</div>
     </div>
 
     <div class="card">
       <h3>Best Score</h3>
-      <div class="score">85</div>
-      <div class="tag">Excellent ⭐</div>
-    </div>
-
-    <div class="card">
-      <h3>Stress Trend</h3>
-      <div class="score">↓</div>
-      <div class="tag">Improving 🧠</div>
+      <div class="score" id="bestScore">--</div>
     </div>
   </div>
 
-  <!-- CTA -->
   <div class="cta">
     <div>
       <h3>Check Your Current Ikigai Score</h3>
-      <p>Analyze today’s habits and see how balanced your life is.</p>
+      <p>Analyze today’s habits and see your balance.</p>
     </div>
     <button onclick="goToAnalysis()">Analyze Now</button>
   </div>
-
 </div>
 
 <script>
-  // Show logged-in user name in navbar
-  const user = JSON.parse(localStorage.getItem("ikigai_current_user"));
+  const currentUser = JSON.parse(localStorage.getItem("ikigai_current_user"));
+  if (!currentUser) window.location.href = "login.html";
 
-  if (user) {
-    document.getElementById("profileName").innerText = `👤 Hi, ${user.name}`;
-  } else {
-    // If no user is logged in, send back to login
+  const users = JSON.parse(localStorage.getItem("ikigai_users")) || [];
+  const user = users.find(u => u.email === currentUser.email);
+
+  document.getElementById("userName").innerText = "👤 " + user.name;
+
+  if (user.ikigaiHistory && user.ikigaiHistory.length > 0) {
+    const scores = user.ikigaiHistory.map(i => i.score);
+    document.getElementById("latestScore").innerText = scores.at(-1);
+    document.getElementById("avgScore").innerText =
+      Math.round(scores.reduce((a,b)=>a+b,0) / scores.length);
+    document.getElementById("bestScore").innerText = Math.max(...scores);
+  }
+
+  function goToAnalysis() {
+    window.location.href = "index.html";
+  }
+
+  function logout() {
+    localStorage.removeItem("ikigai_current_user");
     window.location.href = "login.html";
   }
-
-  // Navigate to analysis page
-  function goToAnalysis() {
-    window.location.href = "./index.html";
-  }
 </script>
-
-
 
 </body>
 </html>
