--- a/frontend/home.html
+++ b/frontend/home.html
@@ -127,7 +127,7 @@
 </div>
 
 <div class="hero">
-  <img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773" />
+  <img src="assets/homeimage.png" alt="Ikigai banner">
 </div>
 
 <div class="container">
