--- a/frontend/guidelines.html
+++ b/frontend/guidelines.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Personalized Guidelines | Ikigai</title>
+  <title>Your Personalized Guidelines | Ikigai</title>
 
   <style>
     body {
@@ -14,7 +14,7 @@
     }
 
     .container {
-      max-width: 800px;
+      max-width: 850px;
       margin: auto;
       background: white;
       padding: 35px;
@@ -24,6 +24,7 @@
 
     h1 {
       text-align: center;
+      color: #4f46e5;
       margin-bottom: 10px;
     }
 
@@ -33,53 +34,54 @@
       margin-bottom: 30px;
     }
 
+    .badge {
+      display: inline-block;
+      padding: 8px 16px;
+      border-radius: 20px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
     .section {
-      margin-bottom: 30px;
+      margin-top: 30px;
     }
 
     .card {
-      background: #ecfeff;
-      border-left: 6px solid #16a34a;
+      background: #eef2ff;
       padding: 18px;
-      border-radius: 12px;
-      margin-bottom: 15px;
+      border-radius: 14px;
+      margin-top: 12px;
       line-height: 1.7;
     }
 
-    .warning {
-      background: #fff7ed;
-      border-left-color: #f97316;
+    ul {
+      margin-top: 10px;
     }
 
-    .danger {
-      background: #fef2f2;
-      border-left-color: #dc2626;
+    li {
+      margin-bottom: 8px;
     }
 
-    .tag {
-      font-weight: bold;
-      margin-bottom: 6px;
-    }
-
-    button {
+    .btn {
+      margin-top: 30px;
       display: block;
-      margin: 30px auto 0;
-      padding: 14px 28px;
-      font-size: 16px;
-      border-radius: 12px;
-      border: none;
-      cursor: pointer;
-      background: linear-gradient(135deg, #4f46e5, #16a34a);
+      width: 100%;
+      padding: 14px;
+      background: linear-gradient(135deg, #16a34a, #4f46e5);
       color: white;
+      border: none;
+      border-radius: 12px;
+      font-size: 16px;
+      cursor: pointer;
       font-weight: bold;
     }
 
-    button:hover {
+    .btn:hover {
       opacity: 0.9;
     }
 
     .note {
-      margin-top: 30px;
+      margin-top: 25px;
       font-size: 13px;
       color: #666;
       text-align: center;
@@ -90,119 +92,121 @@
 <body>
 
 <div class="container">
-  <h1>🌿 Your Personalized Ikigai Guidelines</h1>
-  <p class="subtitle">
-    Based on your recent habits, stress level, and Ikigai balance
-  </p>
 
-  <div id="guidelines"></div>
+  <h1>🌿 Your Ikigai Guidelines</h1>
+  <p class="subtitle">Personalized actions based on your latest analysis</p>
 
-  <button onclick="goHome()">🏠 Back to Dashboard</button>
+  <div id="summary"></div>
+
+  <div class="section">
+    <h3>🌙 Sleep & Recovery</h3>
+    <div class="card" id="sleepTips"></div>
+  </div>
+
+  <div class="section">
+    <h3>📱 Screen & Focus</h3>
+    <div class="card" id="screenTips"></div>
+  </div>
+
+  <div class="section">
+    <h3>🧠 Stress & Mindset</h3>
+    <div class="card" id="stressTips"></div>
+  </div>
+
+  <div class="section">
+    <h3>📈 Productivity & Growth</h3>
+    <div class="card" id="growthTips"></div>
+  </div>
+
+  <button class="btn" onclick="goHome()">⬅ Back to Dashboard</button>
 
   <div class="note">
-    ⚠ These suggestions are for awareness and preventive well-being only.
+    ⚠ This guidance is for awareness & improvement, not medical diagnosis.
   </div>
+
 </div>
 
 <script>
-/* 🔒 AUTH CHECK */
+/* 🔒 PROTECT PAGE */
 const currentUser = JSON.parse(localStorage.getItem("ikigai_current_user"));
 if (!currentUser) {
   window.location.href = "login.html";
 }
 
-/* 📥 LOAD LAST RESULT */
+/* 📦 LOAD LAST RESULT */
 const last = JSON.parse(localStorage.getItem("ikigai_last_result"));
 if (!last) {
   alert("No analysis found. Please analyze first.");
   window.location.href = "index.html";
 }
 
+const score = last.result.layer3_ikigai.ikigai_score;
 const stress = last.result.layer3_ml_support.final_stress_level;
-const ikigaiScore = last.result.layer3_ikigai.ikigai_score;
 
-let html = "";
+/* 🎯 SUMMARY */
+let status = "";
+let color = "";
 
-/* 🧠 STRESS-BASED GUIDELINES */
-html += `<div class="section">
-  <h3>🧠 Stress-Level Guidance</h3>`;
-
-if (stress === "High") {
-  html += `
-    <div class="card danger">
-      <div class="tag">🚨 High Stress Detected</div>
-      • Reduce screen exposure, especially at night<br>
-      • Ensure at least 7 hours of sleep<br>
-      • Take short breaks between study sessions<br>
-      • Talk to someone you trust
-    </div>`;
-} 
-else if (stress === "Medium") {
-  html += `
-    <div class="card warning">
-      <div class="tag">⚠ Moderate Stress</div>
-      • Maintain consistent sleep timings<br>
-      • Balance study with physical activity<br>
-      • Limit late-night phone usage
-    </div>`;
-} 
-else {
-  html += `
-    <div class="card">
-      <div class="tag">✅ Low Stress</div>
-      • Your routine looks balanced<br>
-      • Continue healthy habits<br>
-      • Avoid overworking to maintain balance
-    </div>`;
+if (score < 40) {
+  status = "Burnout Zone";
+  color = "#ef4444";
+} else if (score < 70) {
+  status = "Needs Balance";
+  color = "#f59e0b";
+} else if (score < 85) {
+  status = "Healthy Balance";
+  color = "#22c55e";
+} else {
+  status = "Thriving State";
+  color = "#3b82f6";
 }
 
-html += `</div>`;
-
-/* 🌸 IKIGAI SCORE GUIDANCE */
-html += `<div class="section">
-  <h3>🌸 Ikigai Balance Suggestions</h3>`;
-
-if (ikigaiScore < 50) {
-  html += `
-    <div class="card danger">
-      • Your balance is currently low<br>
-      • Focus on rest and emotional well-being<br>
-      • Reduce workload temporarily
-    </div>`;
-}
-else if (ikigaiScore < 75) {
-  html += `
-    <div class="card warning">
-      • You're moderately balanced<br>
-      • Small improvements in sleep & activity can help<br>
-      • Schedule time for things you enjoy
-    </div>`;
-}
-else {
-  html += `
-    <div class="card">
-      • Excellent balance 🌟<br>
-      • You're aligning productivity with well-being<br>
-      • Keep reflecting weekly to stay consistent
-    </div>`;
-}
-
-html += `</div>`;
-
-/* 🎯 HABIT-SPECIFIC TIPS */
-html += `
-<div class="section">
-  <h3>🎯 Habit Improvement Tips</h3>
-  <div class="card">
-    🛌 Sleep: Maintain fixed sleep–wake times<br>
-    📱 Screen: Take a 10-minute break every hour<br>
-    🏃 Activity: Even light movement helps mental clarity<br>
-    😌 Mood: Journaling or mindfulness boosts emotional awareness
+document.getElementById("summary").innerHTML = `
+  <div class="badge" style="background:${color}; color:white;">
+    Ikigai Score: ${score} — ${status}
   </div>
-</div>
 `;
 
-document.getElementById("guidelines").innerHTML = html;
+/* 🌙 SLEEP */
+document.getElementById("sleepTips").innerHTML = `
+<ul>
+  <li>Sleep 7–8 hours consistently</li>
+  <li>Avoid screens 45 minutes before bed</li>
+  <li>Maintain fixed sleep & wake times</li>
+</ul>
+`;
+
+/* 📱 SCREEN */
+document.getElementById("screenTips").innerHTML = `
+<ul>
+  <li>Limit non-essential screen use</li>
+  <li>Follow 50–10 study rule</li>
+  <li>No phone during meals</li>
+</ul>
+`;
+
+/* 🧠 STRESS */
+document.getElementById("stressTips").innerHTML =
+stress === "High"
+? `<ul>
+    <li>Practice 4–7–8 breathing twice daily</li>
+    <li>Light walking or stretching</li>
+    <li>Reduce workload today</li>
+  </ul>`
+: `<ul>
+    <li>Daily journaling</li>
+    <li>Short mindfulness breaks</li>
+    <li>Maintain current routine</li>
+  </ul>`;
+
+/* 📈 GROWTH */
+document.getElementById("growthTips").innerHTML = `
+<ul>
+  <li>Set 3 realistic daily goals</li>
+  <li>Review progress every night</li>
+  <li>Celebrate small wins 🌱</li>
+</ul>
+`;
 
 function goHome() {
   window.location.href = "home.html";
@@ -211,3 +215,4 @@ function goHome() {
 
 </body>
 </html>
+
