Final working Ikigai flow with analysis and guidelines

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -177,7 +177,7 @@
   }
 
   function goToAnalysis() {
-    window.location.href = "index.html";
+    window.location.href = "analysis.html";
   }
 
   function logout() {
