--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,65 +2,97 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Ikigai Mental Health Checker</title>
+  <title>Welcome | Ikigai</title>
 
   <style>
     body {
+      margin: 0;
       font-family: "Segoe UI", Arial, sans-serif;
-      background: #f4f6fb;
+      background: linear-gradient(135deg, #f0fdf4, #eef2ff);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 20px;
     }
 
     .container {
-      max-width: 620px;
-      margin: auto;
-      background: #fff;
-      padding: 25px;
-      border-radius: 14px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    input, button {
+      background: white;
+      max-width: 750px;
       width: 100%;
-      padding: 12px;
-      margin: 8px 0;
-      font-size: 15px;
+      padding: 40px;
+      border-radius: 18px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.12);
+      text-align: center;
     }
 
-    button {
-      background: #4f46e5;
-      color: white;
-      border: none;
-      cursor: pointer;
-      border-radius: 10px;
-      font-weight: bold;
+    .hero-img {
+      width: 160px;
+      margin: 0 auto 20px;
     }
 
-    button:hover {
-      background: #4338ca;
+    .hero-img img {
+      width: 100%;
     }
 
-    .card {
-      background: #eef2ff;
-      padding: 14px;
-      border-radius: 12px;
-      margin-top: 14px;
-      line-height: 1.7;
-    }
-
-    h3 {
-      margin-top: 25px;
+    h1 {
+      margin-bottom: 10px;
       color: #333;
     }
 
-    .guide-btn {
-      margin-top: 20px;
-      background: linear-gradient(135deg, #16a34a, #4f46e5);
+    .subtitle {
+      font-size: 16px;
+      color: #555;
+      margin-bottom: 25px;
+      line-height: 1.6;
+    }
+
+    .about {
+      text-align: left;
+      margin-bottom: 30px;
+      font-size: 15px;
+      color: #333;
+      line-height: 1.7;
+    }
+
+    .buttons {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .buttons button {
+      padding: 14px 26px;
+      font-size: 16px;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
+      min-width: 140px;
+    }
+
+    .login-btn {
+      background: #4f46e5;
+      color: white;
+    }
+
+    .login-btn:hover {
+      background: #4338ca;
+    }
+
+    .signup-btn {
+      background: #16a34a;
+      color: white;
+    }
+
+    .signup-btn:hover {
+      background: #15803d;
+    }
+
+    .note {
+      margin-top: 25px;
+      font-size: 13px;
+      color: #666;
     }
   </style>
 </head>
@@ -68,115 +100,63 @@
 <body>
 
 <div class="container">
-  <h2>🌱 Ikigai Mental Health Checker</h2>
 
-  <input id="sleep" type="number" placeholder="Sleep hours (e.g. 7)" />
-  <input id="study" type="number" placeholder="Study hours (e.g. 5)" />
-  <input id="screen" type="number" placeholder="Screen time (hrs)" />
-  <input id="activity" type="number" placeholder="Physical activity (mins)" />
-  <input id="mood" type="number" placeholder="Mood (1–5)" />
+  <!-- Image -->
+  <div class="hero-img">
+    <img
+      src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4"
+      alt="Ikigai concept"
+    />
+  </div>
 
-  <button onclick="analyze()">Analyze</button>
+  <!-- Title -->
+  <h1>🌱 Welcome to Ikigai</h1>
+  <p class="subtitle">
+    Find balance between your mental well-being and productivity
+  </p>
 
-  <div id="result"></div>
+  <!-- About Ikigai -->
+  <div class="about">
+    <p>
+      <b>Ikigai</b> is a Japanese concept that means
+      <i>“a reason to wake up every morning.”</i>
+    </p>
+
+    <p>
+      As students, we often focus only on performance — exams, deadlines,
+      screen time — while ignoring sleep, mood, and mental balance.
+      Ikigai helps you understand <b>how your daily habits affect your stress,
+      productivity, and overall balance</b>.
+    </p>
+
+    <p>
+      This platform uses simple habit inputs, explainable scoring,
+      and ethical machine learning support to give you
+      <b>early awareness — not diagnosis</b>.
+    </p>
+  </div>
+
+  <!-- Buttons -->
+  <div class="buttons">
+    <button class="login-btn" onclick="goLogin()">Login</button>
+    <button class="signup-btn" onclick="goSignup()">Sign Up</button>
+  </div>
+
+  <div class="note">
+    ⚠ This system is for awareness and preventive well-being only.
+  </div>
+
 </div>
 
 <script>
-/* 🔒 AUTH CHECK */
-const currentUser = JSON.parse(localStorage.getItem("ikigai_current_user"));
-if (!currentUser) {
-  alert("Please login first");
-  window.location.href = "login.html";
-}
-
-/* 📊 MAIN ANALYSIS */
-async function analyze() {
-  const data = {
-    sleep: Number(document.getElementById("sleep").value),
-    study: Number(document.getElementById("study").value),
-    screen: Number(document.getElementById("screen").value),
-    activity: Number(document.getElementById("activity").value),
-    mood: Number(document.getElementById("mood").value)
-  };
-
-  if (Object.values(data).some(v => isNaN(v))) {
-    alert("Please fill all fields correctly");
-    return;
+  function goLogin() {
+    window.location.href = "login.html";
   }
 
-  const response = await fetch("http://127.0.0.1:5000/ikigai", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(data)
-  });
-
-  const res = await response.json();
-
-  /* ✅ SAVE FOR GUIDELINES PAGE */
-  localStorage.setItem(
-    "ikigai_last_result",
-    JSON.stringify({ input: data, result: res })
-  );
-
-  /* ✅ SAVE TO USER HISTORY */
-  saveIkigaiResult(
-    res.layer3_ikigai.ikigai_score,
-    res.layer3_ml_support.final_stress_level
-  );
-
-  /* ✅ DISPLAY RESULT */
-  document.getElementById("result").innerHTML = `
-    <h3>🔹 Daily Habit Scores</h3>
-    <div class="card">
-      🛌 Sleep: ${res.layer1_normalized.sleep_score}<br>
-      📚 Study: ${res.layer1_normalized.study_score}<br>
-      📱 Screen: ${res.layer1_normalized.screen_score}<br>
-      🏃 Activity: ${res.layer1_normalized.activity_score}<br>
-      😌 Mood: ${res.layer1_normalized.mood_score}
-    </div>
-
-    <h3>🧠 Stress & Productivity</h3>
-    <div class="card">
-      Stress Score: ${res.layer2_scores.stress_score}<br>
-      Stress Level: <b>${res.layer2_scores.rule_based_stress}</b><br>
-      Productivity: ${res.layer2_scores.productivity_score}
-    </div>
-
-    <h3>🌸 Ikigai Balance</h3>
-    <div class="card">
-      ⭐ <b>Ikigai Score: ${res.layer3_ikigai.ikigai_score}</b>
-    </div>
-
-    <button class="guide-btn" onclick="goToGuidelines()">
-      🌿 View Personalized Guidelines
-    </button>
-  `;
-}
-
-/* 💾 SAVE HISTORY */
-function saveIkigaiResult(score, stress) {
-  let users = JSON.parse(localStorage.getItem("ikigai_users")) || [];
-  const user = users.find(u => u.email === currentUser.email);
-  if (!user) return;
-
-  if (!user.ikigaiHistory) user.ikigaiHistory = [];
-
-  user.ikigaiHistory.push({
-    score,
-    stress,
-    date: new Date().toISOString().split("T")[0]
-  });
-
-  localStorage.setItem("ikigai_users", JSON.stringify(users));
-}
-
-/* 🔗 NAVIGATION */
-function goToGuidelines() {
-  window.location.href = "guidelines.html";
-}
+  function goSignup() {
+    window.location.href = "signup.html";
+  }
 </script>
 
 </body>
 </html>
-
-
